@@ -29,9 +29,13 @@ describe 'moving an evidence', js: true do
     click_move_evidence
   end
 
-  let(:current_evidence) { @evidence = create(:evidence, node: @node_5) }
+  let(:content) { "#[Description]#\nTest Evidence\n" }
+  let(:current_evidence) { @evidence = create(:evidence, content: content, node: @node_5) }
 
   describe 'moving an evidence to a different node' do
+    let(:attachment) { create(:attachment, node: @node_5) }
+    let(:content) { "#[Description]#\n!/projects/#{current_project.id}/nodes/#{@node_5.id}/attachments/#{attachment.filename}!\n" }
+
     before do
       within('#modal_move_evidence') do
         click_link @node_1.label
@@ -45,6 +49,10 @@ describe 'moving an evidence', js: true do
 
     it 'should redirect to evidence show path' do
       expect(current_path).to eq(project_node_evidence_path(current_project, @node_1, current_evidence))
+    end
+
+    it 'should update the attachment reference to the new node' do
+      expect(current_evidence.reload.content).to include("nodes/#{@node_1.id}")
     end
   end
 
